z-index fixed

--- a/themes/default/statics/css/main.styles.css
+++ b/themes/default/statics/css/main.styles.css
@@ -15241,7 +15241,7 @@ body
   position: absolute;
   left: 0;
   top: 0;
-  z-index: 10;
+  z-index: 501;
   background: var(--smc-main-bg-color-2);
   overflow: hidden;
 }
@@ -15470,25 +15470,6 @@ body
   div.input-autocomplete__hashtags-list
   div.hashtag-list-item:last-child {
   border-bottom: none;
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__hashtags
-  div.input-autocomplete__hashtags-list
-  div.hashtag-list-item:hover,
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__hashtags
-  div.input-autocomplete__hashtags-list
-  div.hashtag-list-item:focus {
-  background: var(--smc-main-ehbg-color);
 }
 
 body div.timeline-pubbox-container > div.rp form div.preview-og-holder {
@@ -49054,275 +49035,6 @@ body
   background-color: var(--smc-main-uiel-color);
   outline: 0;
   border-radius: 5px;
-}
-
-body div.timeline-pubbox-container > div.rp form div.input-autocomplete {
-  display: block;
-  line-height: 0;
-  margin-bottom: 20px;
-  position: relative;
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__usernames {
-  width: 300px;
-  border-radius: var(--smc-main-border-rad2);
-  box-shadow: var(--smc-main-box-shadow-eff);
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: 10;
-  background: var(--smc-main-bg-color-2);
-  overflow: hidden;
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__usernames
-  div.input-autocomplete__username-list {
-  width: 100%;
-  display: block;
-  max-height: 300px;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__usernames
-  div.input-autocomplete__username-list
-  div.username-list-item {
-  display: block;
-  width: 100%;
-  border-bottom: 1px solid var(--smc-main-border-color);
-  padding: 10px 15px;
-  cursor: pointer;
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__usernames
-  div.input-autocomplete__username-list
-  div.username-list-item
-  div.avatar {
-  width: 38px;
-  height: 38px;
-  overflow: hidden;
-  border-radius: 10em;
-  border: 1px solid var(--smc-main-border-color);
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__usernames
-  div.input-autocomplete__username-list
-  div.username-list-item
-  div.avatar
-  img {
-  width: 100%;
-  height: 100%;
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__usernames
-  div.input-autocomplete__username-list
-  div.username-list-item
-  div.username {
-  display: block;
-  padding-left: 10px;
-  line-height: 18px;
-  font-weight: 600;
-  font-size: 14px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  max-width: calc(100% - 20px);
-  color: var(--smc-main-text-color);
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__usernames
-  div.input-autocomplete__username-list
-  div.username-list-item
-  div.username
-  span:first-child {
-  width: 100%;
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__usernames
-  div.input-autocomplete__username-list
-  div.username-list-item
-  div.username
-  span:last-child {
-  color: var(--smc-main-text-color-2);
-  display: block;
-  font-weight: 400;
-  font-size: 14px;
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__usernames
-  div.input-autocomplete__username-list
-  div.username-list-item:last-child {
-  border-bottom: none;
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__usernames
-  div.input-autocomplete__username-list
-  div.username-list-item:hover,
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__usernames
-  div.input-autocomplete__username-list
-  div.username-list-item:focus {
-  background: var(--smc-main-ehbg-color);
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__hashtags {
-  width: 300px;
-  border-radius: var(--smc-main-border-rad2);
-  box-shadow: var(--smc-main-box-shadow-eff);
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: 10;
-  background: var(--smc-main-bg-color-2);
-  overflow: hidden;
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__hashtags
-  div.input-autocomplete__hashtags-list {
-  width: 100%;
-  display: block;
-  max-height: 300px;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__hashtags
-  div.input-autocomplete__hashtags-list
-  div.hashtag-list-item {
-  display: block;
-  width: 100%;
-  border-bottom: 1px solid var(--smc-main-border-color);
-  padding: 10px 15px;
-  cursor: pointer;
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__hashtags
-  div.input-autocomplete__hashtags-list
-  div.hashtag-list-item
-  p {
-  font-size: 15px;
-  line-height: 18px;
-  color: var(--smc-main-text-color);
-  font-weight: 500;
-  padding: 0;
-  margin: 0;
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__hashtags
-  div.input-autocomplete__hashtags-list
-  div.hashtag-list-item
-  p
-  span {
-  color: var(--smc-main-text-color-2);
-  font-weight: normal;
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__hashtags
-  div.input-autocomplete__hashtags-list
-  div.hashtag-list-item:last-child {
-  border-bottom: none;
-}
-
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__hashtags
-  div.input-autocomplete__hashtags-list
-  div.hashtag-list-item:hover,
-body
-  div.timeline-pubbox-container
-  > div.rp
-  form
-  div.input-autocomplete
-  div.input-autocomplete__hashtags
-  div.input-autocomplete__hashtags-list
-  div.hashtag-list-item:focus {
-  background: var(--smc-main-ehbg-color);
 }
 
 body div.timeline-pubbox-container > div.rp form div.preview-og-holder {
